--- a/quiz/templates/control_quiz_events_detail.html
+++ b/quiz/templates/control_quiz_events_detail.html
@@ -7,10 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>{{ quiz_event.name }}</h2>
     <table>
         <thead>
             <tr>
-                <th>ID</th>
+                <th colspan="8">出題履歴</th>
+            </tr>
+            <tr>
+                <th>クイズID</th>
+                <th>問題ID</th>
                 <th>問題文</th>
                 <th>A</th>
                 <th>B</th>
@@ -23,15 +28,13 @@
             {% for object in object_list %}
             <tr>
                 <td>{{ object.id }}</td>
-                <td>{{ object.sentence }}</td>
-                <td>{{ object.choiceA }}</td>
-                <td>{{ object.choiceB }}</td>
-                <td>{{ object.choiceC }}</td>
-                <td>{{ object.choiceD }}</td>
-                <td>{{ object.correctChoice }}</td>
-                <td>
-                    <button>出題する</button>
-                </td>
+                <td>{{ object.question.id }}</td>
+                <td>{{ object.question.sentence }}</td>
+                <td>{{ object.question.choiceA }}</td>
+                <td>{{ object.question.choiceB }}</td>
+                <td>{{ object.question.choiceC }}</td>
+                <td>{{ object.question.choiceD }}</td>
+                <td>{{ object.question.correctChoice }}</td>
             </tr>
             {% endfor %}
         </tbody>
