--- a/quiz/templates/control_quiz_login.html
+++ b/quiz/templates/control_quiz_login.html
@@ -5,5 +5,16 @@
         <title>クイズ管理サイト - ログイン</title>
     </head>
     <body>
+        <h1>クイズ管理サイト　ログイン</h1>
+        <form method="post" action="{% url '' %}">
+            {% csrf_token %}
+            
+            <label for="userid">ユーザ名: </label>
+            <input type="text" name="userid">
+            <label for="password">パスワード: </label>
+            <input type="password" name="password">
+
+            <input type="submit" value="Login">
+        </form>
     </body>
 </html>
