UPDATE control_quiz_toppage.html: 管理画面のトップページ

--- a/quiz/templates/control_quiz_toppage.html
+++ b/quiz/templates/control_quiz_toppage.html
@@ -5,6 +5,10 @@
         <title>クイズ管理サイト - トップページ</title>
     </head>
     <body>
-
+        <h1>クイズ管理サイト トップページ</h1>
+        <p>必要な操作を選択してください。</p>
+        <p><a href="{% url '' %}">クイズ、開催会の設定</a></p>
+        <p><a href="{% url '' %}">ランキングの確認</a></p>
+        <p><a href="{% url '' %}">クイズの出題などの操作</a></p>
     </body>
 </html>
