--- a/quiz/templates/control_quiz_history.html
+++ b/quiz/templates/control_quiz_history.html
@@ -2,9 +2,14 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>クイズ管理サイト　履歴</title>
+        <title>クイズ管理サイト - ランキング</title>
     </head>
     <body>
-
+        <h1>クイズ管理サイト　ランキング</h1>
+        <p>クイズの開催会を選んでください</p>
+        <!--テンプレート言語で一覧をうまく表示させてください-->
+        <select name="">
+            <option value=""></option>
+        </select>
     </body>
 </html>
