UPDATE quiz_play.html: ランキング表示のレイヤーを作成

--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -56,6 +56,56 @@
 				<p class="text-2xl">答えはAです。</p>
 			</div>
 		</div>
+		<!--ランキング表示-->
+	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: hidden;">
+		  <div>
+			  <h2 class="flex justify-center text-4xl">中間/最終発表</h2>
+		  </div>
+		  <div class="flex justify-center w-auto overflow-y-auto h-96 m-6 bg-white border-2 border-yellow-300 rounded">
+				<table class="text-gray-800 w-full sm:w-auto">
+					<thead class="text-left border-b-2 border-gray-300">
+						<tr>
+							<th class="px-4 py-3">#</th><th class="px-4 py-3">Name</th><th class="px-4 py-3">Score</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+						<tr>
+							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div>
+				<p class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100">トップページに戻る</p>
+			</div>
+	  </div>
 		<!--クイズ画面-->
 		<div id="quiz" class="w-full">
 			<!--配信画面-->
