--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -118,7 +118,7 @@
 				</h2>
 				<div id="streaming-body" class="" aria-labelledby="streaming-header">
 					<div class="flex justify-center border border-b-0 border-orange-200">
-						<iframe class="h-64 w-96" src="https://www.youtube.com/embed/D48T0wNm96w" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+						<iframe class="h-60 w-screen" src="https://www.youtube.com/embed/D48T0wNm96w" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 					</div>
 				</div>
 			</div>
