UPDATE quiz_play.html: 任意のメッセージを表示する枠

--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -21,6 +21,7 @@
 					</svg>                       
 				</button>
 				-->
+			<p class="text-xl mr-5">INIAD-Qにようこそ!</p>
 		</div>
 	</header>
 	<!--コンテンツ-->
