--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -58,53 +58,19 @@
 			</div>
 		</div>
 		<!--ランキング表示-->
-	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: hidden;">
+	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: visible;">
 		  <div>
-			  <h2 class="flex justify-center text-4xl">中間/最終発表</h2>
+			  <h2 id="ranking-head" class="flex justify-center text-4xl">中間発表</h2>
 		  </div>
-		  <div class="flex justify-center w-auto overflow-y-auto h-96 m-6 bg-white border-2 border-yellow-300 rounded">
-				<table class="text-gray-800 w-full sm:w-auto">
-					<thead class="text-left border-b-2 border-gray-300">
-						<tr>
-							<th class="px-4 py-3">#</th><th class="px-4 py-3">Name</th><th class="px-4 py-3">Score</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-						<tr>
-							<td class="px-4 py-3">1</td><td class="px-4 py-3">イニャー</td><td class="px-4 py-3">110</td>
-						</tr>
-					</tbody>
-				</table>
+		  <div class="flex justify-center w-auto overflow-y-auto h- m-6 bg-white border-2 border-yellow-300 rounded">
+				<div >
+					<p class="p-6 leading-10 w-full text-4xl">あなたのスコア: <span id="score" class="text-6xl">X</span>点</p>
+					<p class="p-6 leading-10 w-full text-4xl">あなたの順位: <span id="rank" class="text-6xl">X</span>位</p>
+			  	</div>
 			</div>
 			<div>
-				<p class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100">トップページに戻る</p>
+				<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100 hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
+				<p id="ranking-close" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100 hidden">閉じる</p>
 			</div>
 	  </div>
 		<!--クイズ画面-->
