--- a/quiz/templates/control_quiz_operate.html
+++ b/quiz/templates/control_quiz_operate.html
@@ -38,7 +38,7 @@
         <h2>クイズ終了ボタン</h2>
             <input type="button" value="終了" onclick="SendOperate(this); return false;">
 
-        <p><a href="">トップページへ</a></p>
+        <p><a href="{% url 'control_quiz_top' %}">トップページへ</a></p>
 
         <script type="text/javascript">
             // 外部のjsファイルではテンプレート言語が使用出来ないようです。
