--- a/quiz/templates/control_quiz_history.html
+++ b/quiz/templates/control_quiz_history.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>クイズ管理サイト　ランキング</h1>
+        <p><a href="{% url 'control_quiz_top' %}">トップページへ</a></p>
         <p>クイズの開催会を選んでください</p>
         <!--テンプレート言語で一覧をうまく表示させてください-->
         {% if object_list %}
