--- a/quiz/templates/control_quiz_events.html
+++ b/quiz/templates/control_quiz_events.html
@@ -7,6 +7,7 @@
     <title>Control QuizEvents</title>
 </head>
 <body>
+    <p><a href="{% url 'control_quiz_top' %}">トップページへ</a></p>
     <table>
         <thead>
             <tr>
