トップページ完成

--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+	{% load static %}
     <head>
         <title>INIAD-Q</title>
         <meta charset="UTF-8">
@@ -84,8 +85,8 @@
 				<h2 class="text-5xl ">REGISTER</h2>
 				<form class="mt-10">
 					<label for="nickname">ニックネーム（必須）</label>
-					<input type="text" class="text-gray-600" value="" minlength="2" maxlength="10" id="nickname">
-					<button type="submit" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn">参加</button>
+					<input type="text" class="text-gray-600" minlength="2" maxlength="10" id="nickname">
+					<button id="join-button" type="submit" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn">参加</button>
 				</form>
 			</div>
 		</section>
@@ -93,4 +94,5 @@
 			<p>©2022 INIAD-FES実行委員会</p>
 		</footer>
     </body>
+	<script src="{% static 'js/index.js' %}"></script>
 </html>
