UPDATE quiz_play.html urls.py: クイズの解答画面を表示するように

--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+{% load static %}
 <head>
 	<title>quiz_play.html</title>
     <meta charset="UTF-8">
@@ -58,7 +59,7 @@
 			</div>
 		</div>
 		<!--ランキング表示-->
-	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: visible;">
+	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: hidden;">
 		  <div>
 			  <h2 id="ranking-head" class="flex justify-center text-4xl">中間発表</h2>
 		  </div>
@@ -69,8 +70,8 @@
 			  	</div>
 			</div>
 			<div>
-				<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100 hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
-				<p id="ranking-close" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100 hidden">閉じる</p>
+				<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden;"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
+				<p id="ranking-close" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden;">閉じる</p>
 			</div>
 	  </div>
 		<!--クイズ画面-->
@@ -141,7 +142,8 @@
 		</section>
 		<footer class="m-5 text-center">
 		  <p>©2022 INIAD-FES実行委員会</p>
-</footer>
+		</footer>
 		<script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+		<script src="{{ static 'js/quiz_play.js' }}"></script>
 	</body>
 </html>
