--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -86,7 +86,7 @@
 				<form class="mt-10">
 					<label for="nickname">ニックネーム（必須）</label>
 					<input type="text" class="text-gray-600" minlength="2" maxlength="10" id="nickname">
-					<button id="join-button" type="submit" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn">参加</button>
+					<button id="join-button" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn">参加</button>
 				</form>
 			</div>
 		</section>
